	(normal-size-super-markup): New function.

	* lily/source-file.cc (Source_file): Add warning for possibly
	intentional but suspicious initialization.

	* scm/chord-name.scm: Small rewrites, layout fixes.  Identify and
	add comments about cut-and-paste programming.

	* flower/rational.cc (lcm): Not used; comment out.

2003-01-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/convert-ly.py	(FatalConversionError.conv): add style
	conversion rule. 

	* scm/chord-name.scm (set-chord-name-style): new function.
	(new-chord-name-brew-molecule): revise to interpret markup only
	(new-chord->markup): cleanuppish rewrite. To be called from the
	new engraver.

	* lily/new-chord-name-engraver.cc: new engraver: call Chord ->
	Markup earlier, during interpreting.

	* input/test/{banter,jazz,american}-chords.ly (scheme): update
	style settings. Rename to chord-names-*.ly

2003-01-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/chord-name.scm: Painful merge of Amy's patch to old-style
	markup code and update to new markup.  Most probably broke some of
	it.
	
2002-12-30  Juergen Reuter  <reuter@ipd.uka.de>

        * Documentation/user/refman.itely: added docu for ambitus and
        clusters

        * lily/lookup.cc, scm/tex.scm: cleanup: avoid nasty double
        ly_quote_scm() in lookup.cc

        * mf/parmesan-clefs.mf: set_char_box fix

        * lily/cluster-engraver.cc: junk implicit protection; use
        Protected_scm instead

2002-12-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/chord-name.scm: Junk "`(," constructs, use make-FOO-markup
	throughout.

	* scm/new-markup.scm: Turn-off error-triggering test code.

2002-12-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/new-markup.scm (markup-thrower-typecheck) 
	(markup-typecheck?):  add full typechecking functions.
	(make-markup-maker): add make-FOO-markup functions.
	(markup-argument-list-error): nice error checking messages.
	(make-markup): better function: less quoting escapades.
