@@ -17,10 +17,10 @@ easier to process."
  	<< c-1 e-3>> 4
 	<< c-1  e-3 g-5 >> 4
 	<< c-1  e-2 g-3 b-5 >> 4
-	\property Voice.fingersHorizontal = ##t
-	<< c-1  e-3 g-5 >> 4
-	\property Voice.fingersHorizontal = ##t
-	<< c-1  e-2 g-3 b-5 >> 4
+	\property Voice.fingerHorizontalDirection = #LEFT
+	<< c-1  es-3 g-5 >> 4
+	\property Voice.fingerHorizontalDirection = #RIGHT
+	<< c-1  e-2 g-3 b-5 >> 4-\arpeggio
 	
 }
 
