@@ -326,8 +326,9 @@ than this number of measures, no number is printed. ")
 scripts left or right of note heads.  Support for this is limited.
 Accidentals will collide with scripts.
 ")
-(translator-property-description 'fingersHorizontal boolean? "Put the middle fingerings to the
-right side of the note head.")
+(translator-property-description 'fingerHorizontalDirection integer?
+				 "If set, put the middle fingerings to
+the side of the note head. Use LEFT, RIGHT or unset.")
 
 (translator-property-description 'skipBars boolean? " Set to true to
 skip the empty bars that are produced by multimeasure notes and rests.
